# ChangeLog for sci-libs/openfoam
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  04 Aug 2008; Oliver Borm (boroli) <oli.borm@web.de>
  openfoam-1.4.1_p20080118.ebuild, openfoam-1.5.ebuild:
  Changed version dependencies

  04 Aug 2008; Oliver Borm (boroli) <oli.borm@web.de> openfoam-1.5.ebuild:
  Fixed some typos in the src_install section, thanks to Maxim Loginov.

  26 Jul 2008; Thomas Anderson <gentoofan23@gentoo.org> openfoam-1.5.ebuild:
  Fix unnecessary quoting

  22 Jul 2008; Oliver Borm (boroli) <oli.borm@web.de> +openfoam-1.5.ebuild,
  +files/OpenFOAM-1.5-compile.patch:
  Version bump to 1.5 for bug 104257, thanks to Tommy[D]

  11 Jun 2008; Thomas Anderson (gentoofan23) <gentoofan23@gmail.com>
  ChangeLog:
  Remove executable prop on patch

  12 Apr 2008; Pielmeier Daniel (billie) <daniel.pielmeier@googlemail.com>
  openfoam-1.4.1_p20080118.ebuild:
  Fix patch as it is now in DISTDIR

  30 Mar 2008; Thomas Sachau (Tommy[D]) tommy@gentoo.org
  openfoam-1.4.1_p20080118.ebuild, -files/openfoam-1.4.1_p20080118.patch:
  Move oversized patch

  28 Mar 2008; Oliver Borm (boroli) <oli.borm@web.de>
  openfoam-1.4.1_p20080118.ebuild, +files/openfoam-1.4.1_p20080118.patch,
  +files/compile-1.4.1_p20080118.patch,
  +files/openfoam-paraFoam-1.4.1_p20080118.patch:
  sci-libs/parmetis in portage requires new dependencies; paraFoam support added

  27 Mar 2008; Markus Ullmann <jokey@gentoo.org> openfoam-1.4.1_p20071028:
  Drop old

  27 Mar 2008; Markus Ullmann <jokey@gentoo.org>
  -openfoam-1.4.1_p20071028.patch, -compile-1.4.1_p20080118.patch,
  -openfoam-1.4.1_p20080118.patch, -compile-1.4.1.patch, -mico-1.4.1.patch,
  openfoam-1.4.1_p20071028, openfoam-1.4.1_p20080118:
  Move patchset to dev.ge.org

  29 Jan 2008; Oliver Borm (boroli) <oli.borm@web.de>
  openfoam-1.4.1_p20071028.ebuild, openfoam-1.4.1_p20080118.ebuild:
  Dependencies updated

  22 Jan 2008; Oliver Borm (boroli) <oli.borm@web.de>