@@ -6,5 +6,5 @@ DIST OpenFOAM-1.5.General.gtgz 117334661 RMD160 bccaa9f8f99d31aa6c791d40b30dd9ad
 DIST openfoam-1.4.1_p20080118.patch 620098 RMD160 8e3e5ee7b6b9248191b0a1ae990ade9df1d7ea36 SHA1 9d0e7ab8fe5432d3601ac616d16b2000e7fa2607 SHA256 fee1c43d5bad63a2fa929556c2850377c084e9508a282f67979a5514445e4de1
 EBUILD openfoam-1.4.1_p20080118.ebuild 10048 RMD160 1e7f5f801ccad7ad54aa77695c18261a9864faa8 SHA1 2928c70036d36b6ef3cf41664d26fc3b5852eb29 SHA256 7857ed7937d812ac45f74f4f88492ae441704cda6e6b4131f85d595fdc35fa8e
 EBUILD openfoam-1.5.ebuild 2951 RMD160 09339e39461ac68e996a9f7e89b62e824a88f82f SHA1 5a02dcf396efe27531fbeec0c0911a49a4e1bc48 SHA256 3a4e74b8c742958b8734227f9aaab6692bfac42d46f206bb9bbfb46fa57022ba
-MISC ChangeLog 3290 RMD160 d65c34dfed440c07d1418916ff27d5ef1c5fa1eb SHA1 881055799f5575375a7cb020aa8b9d28826ebb66 SHA256 97d6a442cfe0fdaabd4610a6f902e4b126c46b03904e1d08e55bd087c69b1506
-MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
+MISC ChangeLog 3411 RMD160 b4dba4998155967f904a9685d954e00d6e079808 SHA1 6dd132faefbafa006dab1cef06de799cab39550a SHA256 f243f50fceafa9a2af9a8a122c71136dea03838017dd3f07023c23b5af43d22c
+MISC metadata.xml 342 RMD160 ddf80db3f4299d93a7d725d1011f66c82226ca13 SHA1 b10a61cbca2c608ab8b73d43d982c21857133bdb SHA256 4d024224740d1d491d9ba577e6c1c66104ec5a91b09dea0e6f37fd647502321f
